@startuml

Package UserAggregate {
	Entity User <<(R,#0099FF) Root Entity>>{}

	Class ActivationStatus  <<(V,#f04800) Value Object>> {}
	Class Username <<(V,#f09800) Unique Identifier>> {}
	Enum UserRole <<(V,#f04800) Value Object>> {}
	Class EmailAddress <<(V,#f04800) Value Object>> {}
	Class Password <<(V,#f04800) Value Object>> {}

	ActivationStatus "1" -* "1" User

	Username "1" --* "1" User
	UserRole "1" --* "1" User
	EmailAddress "1" --* "1" User
	Password "1" --* "1" User
}


Package StaffAggregate {
	Entity Staff <<(R,#0099FF) Root Entity>>{}

	Class AvailabilitySlots <<(V,#f04800) Value Object>> {}
	Class LicenseNumber <<(V,#f09800) Unique Identifier>> {}


	Entity ContactInformation <<Entity>> {}

	Class FirstName <<(V,#f04800) Value Object>> {}
	Class LastName <<(V,#f04800) Value Object>> {}
	Class FullName <<(V,#f04800) Value Object>> {}
	Class EmailAddress <<(V,#f04800) Value Object>> {}
	Class PhoneNumber <<(V,#f04800) Value Object>> {}

	ContactInformation "1" *-- "1" EmailAddress
	ContactInformation "1" *-- "1" PhoneNumber

	FirstName "1" -up-* "1" Staff
	LastName "1" -up-* "1" Staff
	FullName "1" -up-* "1" Staff
	ContactInformation "1" --* "1" Staff
	AvailabilitySlots "*" --* "1" Staff
	LicenseNumber "1" --* "1" Staff
}

Package SpecializationAggregate{
	Entity Specialization <<(R,#0099FF) Root Entity>>{}

	Class SpecializationCode <<(V,#f09800) Unique Identifier>> {}
	Class SpecializationName <<(V,#f04800) Value Object>> {}
	Class SpecializationDescription <<(V,#f04800) Value Object>> {}

	SpecializationCode "1" --* "1" Specialization : identifies
	SpecializationName "1" --* "1" Specialization
	SpecializationDescription "1" --* "1" Specialization
}

Specialization "1" <-- "*" Staff : has a


Package PatientAggregate {
	Entity Patient <<(R,#0099FF) Root Entity>>{}

	Class Gender <<(V,#f04800) Value Object>> {}
	Class MedicalRecordNumber <<(V,#f09800) Unique Identifier>> {}
	Class DateOfBirth <<(V,#f04800) Value Object>> {}
	Class EmergencyContact <<(V,#f04800) Value Object>> {}
	Class EmailAddress <<(V,#f04800) Value Object>> {}
	Class PhoneNumber <<(V,#f04800) Value Object>> {}

	Entity ContactInformation <<Entity>> {}

	Class FirstName <<(V,#f04800) Value Object>> {}
	Class LastName <<(V,#f04800) Value Object>> {}
	Class FullName <<(V,#f04800) Value Object>> {}

	ContactInformation "1" *--- "1" EmailAddress
	ContactInformation "1" *--- "1" PhoneNumber

	FirstName "1" -up-* "1" Patient
	LastName "1" -up-* "1" Patient
	FullName "1" -up-* "1" Patient
	ContactInformation "1" -up-* "1" Patient
	Gender "1" --* "1" Patient
	MedicalRecordNumber "1" --* "1" Patient
	DateOfBirth "1" --* "1" Patient
	EmergencyContact "1" --* "1" Patient
}

Package MedicalConditionAggregate {
	Entity MedicalCondition <<(R,#0099FF) Root Entity>> {}

	Class ConditionCode <<(V,#f04800) Value Object>> {}
	Class ConditionDesignation <<(V,#f04800) Value Object>> {}
	Class ConditionDescription <<(V,#f04800) Value Object>> {}
	Class ConditionSymptoms <<(V,#f04800) Value Object>> {}

	MedicalCondition "1" *-- "1" ConditionCode
	MedicalCondition "1" *-- "1" ConditionDescription
	MedicalCondition "1" *-- "1" ConditionDesignation
	MedicalCondition "1" *-- "1" ConditionSymptoms

}

Package AllergyAggregate {
	Entity Allergy <<(R,#0099FF) Root Entity>> {}

	Class ConditionCode <<(V,#f04800) Value Object>> {}
	Class ConditionDesignation <<(V,#f04800) Value Object>> {}
	Class ConditionDescription <<(V,#f04800) Value Object>> {}
	
	Allergy "1" *-- "1" ConditionCode
	Allergy "1" *-- "1" ConditionDescription
	Allergy "1" *-- "1" ConditionDesignation
}

Package ClinicalDetailsAggregate{
	Entity ClinicalDetails <<(R,#0099FF) Root Entity>> {}
}

Package OperationRequestAggregate {
	Entity OperationRequest <<(R,#0099FF) Root Entity>>{}

	Class OperationRequestID <<(V,#f09800) Unique Identifier>> {}
	Class OperationDeadline <<(V,#f04800) Value Object>> {}
	Enum OperationPriority <<(V,#f04800) Value Object>> {}
}

OperationRequestID "1" --* "1" OperationRequest
OperationDeadline "1" --* "1" OperationRequest
OperationPriority "1" -up-* "1" OperationRequest

Package OperationTypeAggregate {
	Entity OperationType <<(R,#0099FF) Root Entity>>{}

	Class OperationTypeID <<(V,#f09800) Unique Identifier>> {}
	Class OperationTypeName <<(V,#f04800) Value Object>> {}
	Class EstimatedDuration <<(V,#f04800) Value Object>> {}
	Class OperationTypeVersion <<(V,#f04800) Value Object>> {}
	Class OperationTypeStartDate <<(V,#f04800) Value Object>> {}
	Class OperationTypeEndDate <<(V,#f04800) Value Object>> {}
	Class ActivationStatus <<(V,#f04800) Value Object>> {}

	Entity RequiredSpecialist <<Entity>> {}
	Class SpecialistCount <<(V,#f04800) Value Object>> {}

	Entity OperationPhase <<Entity>> {}
	Class PhaseName <<(V,#f04800) Value Object>> {}
	Class PhaseDuration <<(V,#f04800) Value Object>> {}

	ActivationStatus "1" --* "1" OperationType
	OperationTypeID "1" --* "1"  OperationType
	OperationTypeName "1" -up-* "1" OperationType
	EstimatedDuration "1" -up-* "1" OperationType
	OperationTypeVersion "1" -up-* "1" OperationType
	OperationTypeStartDate "1" -left-* "1" OperationType
	OperationTypeEndDate "1" -right-* "1" OperationType
	RequiredSpecialist "*" --* "1" OperationType
	RequiredSpecialist "*" --> "1" Specialization
	SpecialistCount "1" -- "1" RequiredSpecialist
	OperationPhase "*" --* "1" OperationType
	OperationPhase "*" -up- "1" PhaseName
	OperationPhase "*" -up- "1" PhaseDuration
}

Package SurgeryRoomAggregate {
	Entity SurgeryRoom <<(R,#0099FF) Root Entity>>{}

	Class RoomNumber  <<(V,#f09800) Unique Identifier>> {}
	Class RoomType <<(V,#f04800) Value Object>> {}
	Class RoomCapacity <<(V,#f04800) Value Object>> {}
	Class RoomStatus <<(V,#f04800) Value Object>> {}
	Class MaintenanceSlots <<(V,#f04800) Value Object>> {}
}

RoomNumber "1" -up-* "1" SurgeryRoom
RoomType "1" -up-* "1" SurgeryRoom
RoomCapacity "1" -right-* "1" SurgeryRoom
RoomStatus "1" --* "1" SurgeryRoom
MaintenanceSlots "*" --* "1" SurgeryRoom

Package AppointmentAggregate {
	Entity Appointment <<(R,#0099FF) Root Entity>>{}

	Class AppointmentID <<(V,#f09800) Unique Identifier>> {}
	Class DateAndTime <<(V,#f04800) Value Object>> {}
	Class AppointmentStatus <<(V,#f04800) Value Object>> {}
	Entity AssignedStaff <<Entity>>{}

	AssignedStaff "*" -- "1" Appointment 
	DateAndTime "1" --* "1" Appointment
}

Package DoctorAggregate{
	Entity Doctor <<(R,#0099FF) Root Entity>>{}
	Class DoctorID <<(V,#f09800) Unique Identifier>> {}

	DoctorID "1" --* "1" Doctor : identifies
}


Package LogAggregate {
	Entity Log <<(R,#0099FF) Root Entity>>{}
	Class LogID <<(V,#f09800) Unique Identifier>> {}

	Class ObjectLoggedType <<(V,#f04800) Value Object>> {}
	Class DateAndTime <<(V,#f04800) Value Object>> {}
	Class LoggedInformation <<(V,#f04800) Value Object>> {}
	Class LoggedID <<(V,#f04800) Value Object>> {}

	DateAndTime "1" -down-* "1" Log
}

LogID "1" -up-* "1" Log
LoggedInformation "1" -up-* "1" Log
ObjectLoggedType "1" -down-* "1" Log
LoggedID "1" -down-* "1" Log


AppointmentID "1" --* "1" Appointment


AppointmentStatus "1" --* "1" Appointment


Patient "*" ---> "*" Appointment : has records of
MedicalCondition "*" --* "1" ClinicalDetails
Allergy "*" --* "1" ClinicalDetails
ClinicalDetails "1" -- "1" Patient

Staff "1" ---left--> "1" User : is a
Patient "1" --down---> "1" User : can be a


Doctor "0..1" <--- "1" Staff : may be
Doctor "1" -----> "*" OperationRequest : creates
OperationRequest "*" ---left---> "*" Patient : pertains to
OperationRequest "*" -----> "1" OperationType : contains


Appointment "1" ------> "1" OperationRequest : pertains to
AssignedStaff "1" --- "*" Staff : reserves
Appointment "*" ------> "*" SurgeryRoom : reserves a

@enduml
